# invest-model

./: .env  .env.example  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  DATA_ONLY_ARCHITECTURE.md  DATA_QUALITY_AND_FIXES.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  SYSTEM_COMPLETE_REPORT.md  TODO.md  pyproject.toml  readme.md  requirements.txt  setup.py
config/: advisor_intraday_20260622.csv  advisor_intraday_20260622_close.csv  advisor_intraday_20260622_noon.csv  advisor_intraday_20260623.csv  advisor_intraday_20260623_close.csv  advisor_intraday_20260623_noon.csv  advisor_intraday_20260624_noon.csv  advisor_intraday_20260625_close.csv  advisor_intraday_20260625_noon.csv  advisor_intraday_20260626_open.csv  advisor_prune_20260624.csv  advisor_research_20260623_live.csv  advisor_research_20260705.csv  advisor_research_20260705_ai.csv  advisor_signal_template.csv  advisor_signals_20260611.csv  advisor_signals_20260621.csv  advisor_signals_20260630_curated.csv  advisor_signals_20260701_close.csv  advisor_signals_20260701_research.csv  advisor_signals_20260702_noon.csv  advisor_signals_20260702_research.csv  advisor_signals_20260703_open.csv  advisor_signals_20260705.csv  advisor_signals_20260706.csv  advisor_signals_20260706_close.csv  advisor_signals_20260708_noon.csv  advisor_signals_20260708_open.csv  advisor_signals_20260709_close.csv  advisor_signals_20260709_noon.csv  advisor_signals_20260710_close.csv  advisor_signals_20260710_noon.csv  advisor_signals_20260712_weekend.csv  advisor_signals_20260713_close.csv  advisor_signals_20260714_noon.csv  (+107 more)
data/: invest.db
(+462 files in other folders)
