[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-model"
version = "0.3.0"
description = "A股截面多因子自主闭环投资系统"
requires-python = ">=3.10"
dependencies = [
    "tushare>=1.2.89",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]
ml = ["xgboost>=2.0.0", "scikit-learn>=1.3.0"]

[tool.setuptools.packages.find]
include = ["invest_model*"]
